# iced_video_player

./: .gitignore  CODEBUDDY.md  Cargo.toml  README.md  README.zh-CN.md  build.rs  build_err.txt  build_log.txt  darkreader.js  spec.md  tasks.md
.codebuddy/commands/: speckit-constitution.md  speckit-tasks.md
.codebuddy/skills/speckit/: SKILL.md
.specify/: integration.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/requirements/: VideoPlayer.md
src/: app_dispatch.rs  app_handlers.rs  app_handlers_playlist.rs  app_handlers_settings.rs  app_handlers_subtitle.rs  app_keyboard.rs  app_state.rs  boot.rs  dict.rs  dict_view.rs  dict_view_settings.rs  dict_webview.rs  icons.rs  lib.rs  main.rs  pgs.rs  pipeline.rs  pipeline_helpers.rs  playlist.rs  playlist_view.rs  primitive.rs  settings.rs  styles.rs  subtitle_discovery.rs  subtitle_extract.rs  subtitle_parse.rs  subtitle_view.rs  text_utils.rs  video.rs  video_player.rs  views.rs  widgets.rs
src/dict_webview/: ffi_win32.rs  mod.rs  popup_win32.rs  scripts.rs
src/styles/: buttons.rs  mod.rs  surfaces.rs  widgets.rs
src/video/: construction.rs  public_api.rs  thumbnail.rs  worker.rs
src/video_player/: helpers.rs  mod.rs
