[package]
name = "iced_video_player"
description = "A full-featured video player application powered by Iced and GStreamer"
homepage = "https://github.com/jazzfool/iced_video_player"
repository = "https://github.com/jazzfool/iced_video_player"
readme = "README.md"
keywords = ["gui", "iced", "video", "player"]
categories = ["gui", "multimedia"]
version = "0.6.0"
authors = ["jazzfool"]
edition = "2024"
resolver = "2"
license = "MIT OR Apache-2.0"
exclude = [
    ".media/test.mp4"
]

[[bin]]
name = "video-player"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["image", "advanced", "wgpu"] }
iced_wgpu = "0.14"
gstreamer = "0.23"
gstreamer-app = "0.23" # appsink
gstreamer-base = "0.23" # basesrc
gstreamer-video = "0.23" # VideoMeta
glib = "0.20" # gobject traits and error type
log = "0.4"
thiserror = "1"
url = "2" # media uri
rfd = "0.15"      # native file dialogs
ureq = "2"        # HTTP client for dictionary API
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"    # load PNG for window icon

[build-dependencies]
winres = "0.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["wasm32-unknown-unknown"]
